--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "delay": "^4.1.0",
     "history": "^4.7.2",
     "humps": "^2.0.1",
+    "i18next": "^14.0.1",
     "lodash": "^4.17.10",
     "lodash-es": "^4.17.10",
     "memoize-one": "^4.0.3",
@@ -45,6 +46,7 @@
     "react-dom": "^16.7.0",
     "react-full-screen": "^0.2.3",
     "react-gallery": "^0.1.0",
+    "react-i18next": "^9.0.10",
     "react-icons": "^2.2.7",
     "react-images": "^0.5.19",
     "react-loadable": "^5.5.0",
