change home page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "color": "^0.11.4",
     "d3-array": "^1.2.4",
     "delay": "^4.1.0",
+    "gsap": "^2.0.2",
     "history": "^4.7.2",
     "humps": "^2.0.1",
     "i18next": "^14.0.1",
